<resources>
    <string name="app_name">My Application</string>
    <string name="java_button">Java button</string>
    <string name="hello">Hello</string>
    <string name="button_text">Send data</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="textview">TextView</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="_20">20%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
</resources>