<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_bill_amount"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#0277BD"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:backgroundTint="#2196F3"
        android:onClick="getTip10"
        android:text="@string/_10"
        android:textColor="#212121"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:backgroundTint="#FFC107"
        android:contentDescription="@string/todo"
        android:onClick="getTip20"
        android:text="@string/_20"
        android:textColor="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#FF0000"
        android:onClick="getTip15"
        android:text="@string/_15"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="444dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tipping" />
</androidx.constraintlayout.widget.ConstraintLayout>